testsuite/tests/typing-layouts-products/parsing_module_dot_unboxed_record.compilers.reference
File "parsing_module_dot_unboxed_record.ml", line 14, characters 11-12:
14 | let t = M.#{ i = 1 }
                ^
Error: Syntax error
